Update to Java 21 and Gradle 8.5; add options required to build